<resources>
    <string name="app_name">YTLAT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="first_name">Ism</string>
    <string name="last_name">Qisqacha ma\'lumot kiriting!</string>
    <string name="enter_your_name">Ism va ma\'lumot kiriting</string>
    <string name="cancel">Bekor qilish</string>
    <string name="start">Boshlash</string>
    <string name="error_empty_field">Iltimos maydonlarni to\'ldiring</string>
    <string name="previous">Oldingisi</string>
    <string name="next">Keyingisi</string>
    <string name="finish">Yakunlash</string>
</resources>