<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:minWidth="320dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:inputType="text"
        android:id="@+id/first_name_et"
        android:textColor="@color/black"
        android:padding="16dp"
        android:background="@drawable/corner_bg"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginTop="16dp"
        android:id="@+id/last_name_et"
        android:textColor="@color/black"
        android:padding="16dp"
        android:background="@drawable/corner_bg"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id="@+id/cancel_btn"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:id="@+id/start_btn"
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>